# A-Maze-ing

./: .flake8  .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.out  mazegen.py  pyproject.toml  requirements.txt
display/: render.py
export/: export.py
mazegen/: 42_pattern.py  __init__.py  cell.py  find_path.py  generator.py  maze.py  pattern_42.py
mazegen.egg-info/: SOURCES.txt
t/: test.py
utils/: parsing.py
